syntax = "proto3";

package branch_service;

option go_package = "genproto/branch_service";

message Branch {
    string id = 1;
    string name = 2;
    string address = 3;
    string founded_at = 4;
    string created_at = 5;
    string updated_at = 6;
    string deleted_at = 7;
}

message BranchCreateReq {
    string name = 1;
    string address = 2;
    string founded_at = 3;
}

message BranchCreateResp {
    string msg = 1;
}

message BranchGetListReq {
    int64 page = 1;
    int64 limit = 2;
    string search = 3;
}

message BranchGetListResp {
    repeated Branch branches = 1;
    int64 count = 2;
}

message BranchIdReq {
    string id = 1;
}

message BranchUpdateReq {
    string id = 1;
    string name = 2;
    string address = 3;
    string founded_at = 4;
}

message BranchUpdateResp {
    string msg = 1;
}

message BranchDeleteResp {
    string msg = 1;
}
